2º commit - Layout responsivo (teste)

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
          <div class="about-me__informations">
             <h2>Sobre mim</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum voluptatibus doloremque nulla provident quas magni doloribus ea illo inventore qui. Magni alias eum beatae accusantium sint qui, odio delectus, nobis voluptatum, ea ratione. Necessitatibus ut sed praesentium dolorem provident incidunt illum inventore? At odit neque eligendi molestiae veritatis fuga tempore id recusandae pariatur! Corrupti modi odit esse, aspernatur natus error voluptatem doloribus provident blanditiis, repudiandae eos? Delectus reiciendis necessitatibus vitae explicabo minima quisquam ullam tempore. Laudantium velit totam vel magni sapiente cum temporibus nihil iusto asperiores laborum assumenda, quis, illo, id quae nemo aliquam corporis sequi officia nulla aut? Nostrum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum voluptatibus doloremque nulla provident quas magni doloribus ea illo inventore qui. Magni alias eum beatae accusantium sint qui, odio delectus, nobis voluptatum, ea ratione. Necessitatibus ut sed praesentium dolorem provident incidunt illum inventore?</p>
          </div>
       </section>
 
@@ -57,7 +57,7 @@
                <div class="project-info">
                   <h3>Projeto 1</h3>
                   <h2>Hamburgueria Online</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dicta nam ex veritatis cupiditate! Praesentium explicabo voluptas libero consectetur facilis numquam, aperiam, quaerat quia cupiditate distinctio obcaecati sit soluta! Voluptas nesciunt nihil quae. Atque eius, ipsa laboriosam animi dolorum in nostrum sed, beatae quia tenetur excepturi accusamus vero voluptatem aperiam? Quasi nemo provident tempora reiciendis. Nobis magnam nulla natus repudiandae doloribus! Delectus nisi natus quos beatae vel nulla non eligendi?</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dicta nam ex veritatis cupiditate! Praesentium explicabo voluptas libero consectetur facilis numquam, aperiam, quaerat quia cupiditate distinctio obcaecati sit soluta!</p>
 
                   <a href="#">
                      <span class="arrow">&rightarrow;</span>
@@ -74,7 +74,7 @@
                <div class="project-info">
                   <h3>Projeto 2</h3>
                   <h2>Hamburgueria Online</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dicta nam ex veritatis cupiditate! Praesentium explicabo voluptas libero consectetur facilis numquam, aperiam, quaerat quia cupiditate distinctio obcaecati sit soluta! Voluptas nesciunt nihil quae. Atque eius, ipsa laboriosam animi dolorum in nostrum sed, beatae quia tenetur excepturi accusamus vero voluptatem aperiam? Quasi nemo provident tempora reiciendis. Nobis magnam nulla natus repudiandae doloribus! Delectus nisi natus quos beatae vel nulla non eligendi?</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dicta nam ex veritatis cupiditate! Praesentium explicabo voluptas libero consectetur facilis numquam, aperiam, quaerat quia cupiditate distinctio obcaecati sit soluta!</p>
 
                   <a href="#">
                      <span class="arrow">&rightarrow;</span>
@@ -91,7 +91,7 @@
                <div class="project-info">
                   <h3>Projeto 3</h3>
                   <h2>Hamburgueria Online</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dicta nam ex veritatis cupiditate! Praesentium explicabo voluptas libero consectetur facilis numquam, aperiam, quaerat quia cupiditate distinctio obcaecati sit soluta! Voluptas nesciunt nihil quae. Atque eius, ipsa laboriosam animi dolorum in nostrum sed, beatae quia tenetur excepturi accusamus vero voluptatem aperiam? Quasi nemo provident tempora reiciendis. Nobis magnam nulla natus repudiandae doloribus! Delectus nisi natus quos beatae vel nulla non eligendi?</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dicta nam ex veritatis cupiditate! Praesentium explicabo voluptas libero consectetur facilis numquam, aperiam, quaerat quia cupiditate distinctio obcaecati sit soluta!</p>
 
                   <a href="#">
                      <span class="arrow">&rightarrow;</span>
@@ -108,7 +108,7 @@
                <div class="project-info">
                   <h3>Projeto 4</h3>
                   <h2>Hamburgueria Online</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dicta nam ex veritatis cupiditate! Praesentium explicabo voluptas libero consectetur facilis numquam, aperiam, quaerat quia cupiditate distinctio obcaecati sit soluta! Voluptas nesciunt nihil quae. Atque eius, ipsa laboriosam animi dolorum in nostrum sed, beatae quia tenetur excepturi accusamus vero voluptatem aperiam? Quasi nemo provident tempora reiciendis. Nobis magnam nulla natus repudiandae doloribus! Delectus nisi natus quos beatae vel nulla non eligendi?</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dicta nam ex veritatis cupiditate! Praesentium explicabo voluptas libero consectetur facilis numquam, aperiam, quaerat quia cupiditate distinctio obcaecati sit soluta!</p>
 
                   <a href="#">
                      <span class="arrow">&rightarrow;</span>
